onprem/infra/jenkins/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 1g

spec:
  tls:
  - hosts:
      - jenkins.apjung.me
    secretName: tls-secret
  rules:
  - host: jenkins.apjung.me
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
